deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parks-ui
spec:
  selector:
    matchLabels:
      app: parks-ui
  template:
    metadata:
      labels:
        app: parks-ui
    spec:
      containers:
      - name: parks-ui
        image: hiking-mvc:1.0.1
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-volume
            mountPath: /appsettings.json
      volumes:
        - name: config-volume
          configMap:
            name: parks-ui-configmap
