deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parks-ui-service
spec:
  type: NodePort
  selector:
    app: parks-ui
  ports:
  - port: 8080
    targetPort: 80
